welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: ':' expected but ')' found.
def hunt(color) 
              ^SlugSnail:49: error: identifier expected but '}' found.
}
^